# htd

./: CMakeLists.txt
cmake/templates/htd/: PreprocessorDefinitions.hpp.in
cmake/templates/htd_cli/: PreprocessorDefinitions.hpp.in
cmake/templates/htd_io/: PreprocessorDefinitions.hpp.in
include/htd/: AdaptiveWidthMinimizingTreeDecompositionAlgorithm.hpp  AddEmptyLeavesOperation.hpp  AddEmptyRootOperation.hpp  AddIdenticalJoinNodeParentOperation.hpp  BiconnectedComponentAlgorithm.hpp  BreadthFirstGraphTraversal.hpp  BucketEliminationGraphDecompositionAlgorithm.hpp  BucketEliminationTreeDecompositionAlgorithm.hpp  CliqueMinimalSeparatorAlgorithm.hpp  CombinedWidthMinimizingTreeDecompositionAlgorithm.hpp  CompressionOperation.hpp  ConnectedComponentAlgorithmFactory.hpp  ConstCollection.hpp  ConstIterator.hpp  ConstIteratorBase.hpp  ConstIteratorWrapper.hpp  ConstPointerIteratorWrapper.hpp  DepthFirstConnectedComponentAlgorithm.hpp  DepthFirstGraphTraversal.hpp  DinitzMaxFlowAlgorithm.hpp  DirectedGraph.hpp  DirectedGraphFactory.hpp  DirectedMultiGraph.hpp  DirectedMultiGraphFactory.hpp  EnhancedMaximumCardinalitySearchOrderingAlgorithm.hpp  ExchangeNodeReplacementOperation.hpp  ExhaustiveVertexSelectionStrategy.hpp  FilteredHyperedgeCollection.hpp  FitnessEvaluation.hpp  FlowNetworkStructure.hpp  Graph.hpp  GraphDecomposition.hpp  GraphDecompositionAlgorithmFactory.hpp  GraphFactory.hpp  GraphLabeling.hpp  GraphPreprocessor.hpp  GraphPreprocessorFactory.hpp  GraphSeparatorAlgorithmFactory.hpp  GreedySetCoverAlgorithm.hpp  Helpers.hpp  (+144 more)
include/htd_cli/: Choice.hpp  MultiValueOption.hpp  SingleValueOption.hpp
include/htd_io/: GrFormatGraphToTreeDecompositionProcessor.hpp  HgrFormatGraphToTreeDecompositionProcessor.hpp  HumanReadableExporter.hpp  LpFormatGraphToTreeDecompositionProcessor.hpp  TdFormatExporter.hpp  WidthExporter.hpp
src/htd/: AdaptiveWidthMinimizingTreeDecompositionAlgorithm.cpp  AddEmptyLeavesOperation.cpp  AddEmptyRootOperation.cpp  AddIdenticalJoinNodeParentOperation.cpp  BiconnectedComponentAlgorithm.cpp  BucketEliminationGraphDecompositionAlgorithm.cpp  BucketEliminationTreeDecompositionAlgorithm.cpp  CMakeLists.txt  CliqueMinimalSeparatorAlgorithm.cpp  CombinedWidthMinimizingTreeDecompositionAlgorithm.cpp  CompressionOperation.cpp  DepthFirstConnectedComponentAlgorithm.cpp  DinitzMaxFlowAlgorithm.cpp  DirectedGraph.cpp  DirectedMultiGraph.cpp  EnhancedMaximumCardinalitySearchOrderingAlgorithm.cpp  ExchangeNodeReplacementOperation.cpp  FilteredHyperedgeCollection.cpp  FitnessEvaluation.cpp  Graph.cpp  GraphPreprocessor.cpp  GreedySetCoverAlgorithm.cpp  Helpers.cpp  Hyperedge.cpp  Hypergraph.cpp  HypertreeDecompositionAlgorithm.cpp  InducedSubgraphLabelingOperation.cpp  IterativeImprovementTreeDecompositionAlgorithm.cpp  JoinNodeComplexityReductionOperation.cpp  JoinNodeNormalizationOperation.cpp  JoinNodeReplacementOperation.cpp  LimitChildCountOperation.cpp  LimitMaximumForgottenVertexCountOperation.cpp  LimitMaximumIntroducedVertexCountOperation.cpp  MaximumCardinalitySearchOrderingAlgorithm.cpp  MinDegreeOrderingAlgorithm.cpp  MinFillOrderingAlgorithm.cpp  MinimumSeparatorAlgorithm.cpp  MultiGraph.cpp  MultiHypergraph.cpp  (+15 more)
src/htd_cli/: CMakeLists.txt
src/htd_io/: CMakeLists.txt
src/htd_main/: CMakeLists.txt
test/: CMakeLists.txt
test/htd/: BucketEliminationGraphDecompositionAlgorithmTest.cpp  BucketEliminationTreeDecompositionAlgorithmTest.cpp  CMakeLists.txt  HypertreeDecompositionAlgorithmTest.cpp  ManipulationOperationTest.cpp  PostProcessingPathDecompositionAlgorithmTest.cpp  TreeDecompositionOptimizationTest.cpp
